--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-customer-grid/sw-order-customer-grid.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-customer-grid/sw-order-customer-grid.html.twig
@@ -1,7 +1,7 @@
 {% block sw_order_customer_grid %}
 <sw-card
-    :is-loading="isLoading"
     class="sw-order-customer-grid"
+    :is-loading="isSwitchingCustomer"
 >
     <template #toolbar>
         {% block  sw_order_customer_grid_toolbar %}
@@ -28,71 +28,71 @@
     </template>
 
     <template #grid>
-        {% block sw_order_customer_grid_empty_state %}
-        <sw-empty-state
-            v-if="showEmptyState"
-            class="sw-order-customer-grid__empty-state"
-            :show-description="false"
-            :title="emptyTitle"
-            :absolute="false"
-        >
-            {% block sw_order_customer_grid_empty_state_icon %}
-            <template #icon>
-                <img
-                    :src="'/administration/static/img/empty-states/customer-empty-state.svg' | asset"
-                    :alt="$tc('sw-customer.list.messageEmpty')"
-                >
-            </template>
-            {% endblock %}
-        </sw-empty-state>
-        {% endblock %}
+        <div class="sw-order-customer-grid__container">
+            {% block sw_order_customer_grid_content %}
+            <sw-entity-listing
+                class="sw-order-customer-grid__content"
+                :show-selection="false"
+                :show-settings="false"
+                :items="customers"
+                :columns="customerColumns"
+                :repository="customerRepository"
+                :is-loading="isLoading"
+            >
+                {% block sw_order_customer_grid_content_column_select %}
+                <template #column-select="{ item }">
+                    <div class="sw-field__radio-input">
+                        <!-- eslint-disable-next-line vuejs-accessibility/form-control-has-label -->
+                        <input
+                            type="radio"
+                            name="sw-order-customer"
+                            :checked="isChecked(item)"
+                            @change="onCheckCustomer(item)"
+                        >
+                        <div class="sw-field__radio-state"></div>
+                    </div>
+                </template>
+                {% endblock %}
 
-        {% block sw_order_customer_grid_content %}
-        <sw-entity-listing
-            v-else
-            class="sw-order-customer-grid__content"
-            :full-page="false"
-            :show-selection="false"
-            :show-settings="false"
-            :items="customers"
-            :columns="customerColumns"
-            :repository="customerRepository"
-        >
-            {% block sw_order_customer_grid_content_column_select %}
-            <template #column-select="{ item }">
-                <div class="sw-field__radio-input">
-                    <!-- eslint-disable-next-line vuejs-accessibility/form-control-has-label -->
-                    <input
-                        type="radio"
-                        name="sw-order-customer"
-                        :checked="isChecked(item)"
-                        @change="onCheckbox(item)"
+                {% block sw_order_customer_grid_content_grid_column_name %}
+                <template #column-firstName="{ item }">
+                    <router-link :to="{ name: 'sw.customer.detail', params: { id: item.id } }">
+                        {{ item.firstName }} {{ item.lastName }}
+                    </router-link>
+                </template>
+                {% endblock %}
+
+                {% block sw_settings_product_feature_set_list_grid_columns_actions %}
+                <template #actions="{ item }">
+                    <sw-context-menu-item
+                        target="_blank"
+                        :router-link="{ name: 'sw.customer.detail', params: { id: item.id } }"
                     >
-                    <div class="sw-field__radio-state"></div>
-                </div>
-            </template>
+                        {{ $tc('sw-order.createBase.customerGrid.contextOpenButton') }}
+                    </sw-context-menu-item>
+                </template>
+                {% endblock %}
+            </sw-entity-listing>
             {% endblock %}
 
-            {% block sw_order_customer_grid_content_grid_column_name %}
-            <template #column-firstName="{ item }">
-                <router-link :to="{ name: 'sw.customer.detail', params: { id: item.id } }">
-                    {{ item.firstName }} {{ item.lastName }}
-                </router-link>
-            </template>
+            {% block sw_order_customer_grid_empty_state %}
+            <sw-empty-state
+                v-if="showEmptyState"
+                class="sw-order-customer-grid__empty-state"
+                :show-description="false"
+                :title="emptyTitle"
+            >
+                {% block sw_order_customer_grid_empty_state_icon %}
+                <template #icon>
+                    <img
+                        :src="'/administration/static/img/empty-states/customer-empty-state.svg' | asset"
+                        :alt="$tc('sw-customer.list.messageEmpty')"
+                    >
+                </template>
+                {% endblock %}
+            </sw-empty-state>
             {% endblock %}
-
-            {% block sw_settings_product_feature_set_list_grid_columns_actions %}
-            <template #actions="{ item }">
-                <sw-context-menu-item
-                    target="_blank"
-                    :router-link="{ name: 'sw.customer.detail', params: { id: item.id } }"
-                >
-                    {{ $tc('sw-order.createBase.customerGrid.contextOpenButton') }}
-                </sw-context-menu-item>
-            </template>
-            {% endblock %}
-        </sw-entity-listing>
-        {% endblock %}
+        </div>
 
         {% block sw_order_customer_grid_new_customer_modal %}
         <sw-order-new-customer-modal
