--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
@@ -20,6 +20,7 @@
         ref="routerLink"
         class="sw-search-bar-item__link"
         :to="{ name: 'sw.customer.detail.base', params: { id: item.id } }"
+        @click.native="onClickSearchResult('customer', item.id)"
     >
         {% block sw_search_bar_item_customer_label %}
         <span
@@ -61,6 +62,7 @@
         ref="routerLink"
         class="sw-search-bar-item__link"
         :to="{ name: 'sw.product.detail.base', params: { id: item.id } }"
+        @click.native="onClickSearchResult('product', item.id)"
     >
 
         {% block sw_search_bar_item_product_label %}
@@ -103,6 +105,7 @@
         ref="routerLink"
         class="sw-search-bar-item__link"
         :to="{ name: 'sw.category.detail', params: { id: item.id } }"
+        @click.native="onClickSearchResult('category', item.id)"
     >
 
         {% block sw_search_bar_item_category_label %}
@@ -123,6 +126,7 @@
         ref="routerLink"
         class="sw-search-bar-item__link"
         :to="{ name: 'sw.order.detail', params: { id: item.id } }"
+        @click.native="onClickSearchResult('order', item.id)"
     >
 
         {% block sw_search_bar_item_order_label %}
@@ -165,6 +169,7 @@
         ref="routerLink"
         class="sw-search-bar-item__link"
         :to="{ name: 'sw.media.index', params: { folderId: item.mediaFolderId }, query: { term: item.fileName } }"
+        @click.native="onClickSearchResult('media', item.id)"
     >
 
         {% block sw_search_bar_item_media_label %}
@@ -185,6 +190,7 @@
         ref="routerLink"
         class="sw-search-bar-item__link"
         :to="{ name: 'sw.cms.detail', params: { id: item.id } }"
+        @click.native="onClickSearchResult('cms_page', item.id)"
     >
 
         {% block sw_search_bar_item_cms_page_label %}
@@ -205,6 +211,7 @@
         ref="routerLink"
         class="sw-search-bar-item__link"
         :to="{ name: 'sw.category.landingPageDetail.base', params: { id: item.id } }"
+        @click.native="onClickSearchResult('landing_page', item.id)"
     >
 
         {% block sw_search_bar_item_cms_landing_page_label %}
@@ -247,7 +254,7 @@
 
             {% block sw_search_bar_item_module_label_action %}
             <sw-highlight-text
-                :text="$tc(`global.sw-search-bar-item.${item && item.action ? 'typeLabelAction' : 'typeLabelModule' }`)"
+                :text="$tc(`global.sw-search-bar-item.${ item.action ? 'typeLabelAction': 'typeLabelModule' }`)"
             />
             {% endblock %}
         </span>
