NEXT-17083 - Display frequently used and recently searched

--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.scss
@@ -94,7 +94,7 @@ $sw-search-bar-item-label-hover-color-text: $color-shopware-brand-500;
             width: 350px;
         }
 
-        .sw-highlight-text:last-child {
+        .sw-highlight-text:not(:first-child) {
             color: $color-gray-500;
         }
     }
