--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
@@ -228,7 +228,7 @@
 
     {% block sw_search_bar_item_module %}
     <router-link
-        v-else-if="type === 'module' && feature.isActive('FEATURE_NEXT_6040')"
+        v-else-if="['frequently_used', 'module'].includes(type) && feature.isActive('FEATURE_NEXT_6040')"
         ref="routerLink"
         class="sw-search-bar-item__link"
         :to="routeName"
@@ -254,7 +254,7 @@
 
             {% block sw_search_bar_item_module_label_action %}
             <sw-highlight-text
-                :text="$tc(`global.sw-search-bar-item.${ item.action ? 'typeLabelAction': 'typeLabelModule' }`)"
+                :text="$tc(`global.sw-search-bar-item.${item.action ? 'typeLabelAction': 'typeLabelModule'}`)"
             />
             {% endblock %}
         </span>
