NEXT-16676 - Implement new selection for order address

--- a/src/Administration/Resources/app/administration/src/module/sw-order/view/sw-order-detail-details/sw-order-detail-details.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/view/sw-order-detail-details/sw-order-detail-details.html.twig
@@ -15,7 +15,12 @@
     >
 
         {% block sw_order_detail_details_payment_billing_address %}
-        <div>{{ $tc('sw-order.createBase.detailsBody.labelBillingAddress') }}<!-- NEXT-16676 - Put address selection here --></div>
+        <sw-order-address-selection
+            :address="billingAddress"
+            :address-id="billingAddress.id"
+            :label="$tc('sw-order.createBase.detailsBody.labelBillingAddress')"
+            @change-address="onChangeOrderAddress"
+        />
         {% endblock %}
 
         {% block sw_order_detail_details_payment_method_select %}
@@ -49,7 +54,12 @@
     >
 
         {% block sw_order_detail_details_shipping_address %}
-        <div>{{ $tc('sw-order.createBase.detailsBody.labelShippingAddress') }}<!-- NEXT-16676 - Put address selection here --></div>
+        <sw-order-address-selection
+            :address="delivery.shippingOrderAddress"
+            :address-id="delivery.shippingOrderAddress.id"
+            :label="$tc('sw-order.createBase.detailsBody.labelShippingAddress')"
+            @change-address="onChangeOrderAddress"
+        />
         {% endblock %}
 
         {% block sw_order_detail_details_shipping_method_select %}
