--- a/src/Administration/Resources/app/administration/src/module/sw-category/component/sw-category-layout-card/sw-category-layout-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-category/component/sw-category-layout-card/sw-category-layout-card.html.twig
@@ -25,6 +25,7 @@
             v-if="showLayoutSelectionModal"
             :cms-page-types="pageTypes"
             :headline="headline"
+            :pre-selection="cmsPage"
             @modal-layout-select="onLayoutSelect"
             @modal-close="closeLayoutModal"
         />
