--- a/src/Administration/Resources/app/administration/src/module/sw-product/view/sw-product-detail-layout/sw-product-detail-layout.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/view/sw-product-detail-layout/sw-product-detail-layout.html.twig
@@ -20,6 +20,7 @@
         <sw-cms-layout-modal
             v-if="showLayoutModal"
             :headline="$tc('sw-product.layoutAssignment.subtitle')"
+            :pre-selection="currentPage"
             :cms-page-types="['product_detail']"
             @modal-layout-select="onSelectLayout"
             @modal-close="onCloseLayoutModal"
