--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-layout-modal/sw-cms-layout-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-layout-modal/sw-cms-layout-modal.html.twig
@@ -1,6 +1,7 @@
 {% block sw_cms_layout_modal %}
 <sw-modal
     class="sw-cms-layout-modal"
+    variant="large"
     :title="$tc('sw-cms.components.cmsLayoutModal.modalTitle')"
     @modal-close="closeModal"
 >
@@ -8,18 +9,54 @@
     {% block sw_cms_layout_modal_header %}
     <div class="sw-cms-layout-modal__header">
 
-        {% block sw_cms_layout_modal_header_title %}
-        <div class="sw-cms-layout-modal__header-title">
-            {{ headline ? headline : $tc('sw-cms.components.cmsLayoutModal.headline') }}
-        </div>
-        {% endblock %}
-
         {% block sw_cms_layout_modal_header_search %}
         <sw-simple-search-field
             class="sw-cms-layout-modal__header-search"
             :placeholder="$tc('sw-cms.general.placeholderSearchBar')"
+            :search-term="term"
             @search-term-change="onSearch"
         />
+        {% endblock %}
+
+        {% block sw_cms_layout_modal_header_sorting_container %}
+        <div class="sw-cms-layout-modal__actions-sorting">
+
+            {% block sw_cms_layout_modal_header_sorting_select %}
+            <sw-sorting-select
+                class="sw-cms-layout-modal__header-sorting-select"
+                :sort-by="sortBy"
+                :sort-direction="sortDirection"
+                @sorting-changed="onSort"
+            />
+            {% endblock %}
+
+            {% block sw_cms_layout_modal_header_view_toggle %}
+            <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
+            <div
+                class="sw-cms-layout-modal__actions-mode"
+                @click="toggleListMode"
+            >
+
+                {% block sw_cms_layout_modal_header_view_toogle_grid %}
+                <sw-icon
+                    v-if="listMode === 'grid'"
+                    name="default-view-normal"
+                    size="16"
+                />
+                {% endblock %}
+
+                {% block sw_cms_layout_modal_header_view_toogle_list %}
+                <sw-icon
+                    v-if="listMode === 'list'"
+                    name="default-view-grid"
+                    size="16"
+                />
+                {% endblock %}
+
+            </div>
+            {% endblock %}
+
+        </div>
         {% endblock %}
 
     </div>
@@ -33,43 +70,124 @@
         {% endblock %}
 
         {% block sw_cms_layout_modal_content_container %}
-        <sw-container
-            v-else
-            columns="repeat(auto-fill, minmax(250px, 1fr))"
-            gap="24px"
+        <div v-else-if="listMode === 'grid'">
+            <sw-container
+                columns="repeat(auto-fill, minmax(250px, 1fr))"
+                gap="24px"
+            >
+
+                {% block sw_cms_layout_modal_content_listing %}
+                <div
+                    v-for="(cmsPage, index) in pages"
+                    :key="index"
+                    :class="gridItemClasses(cmsPage.id, index)"
+                >
+                    {% block sw_cms_layout_modal_content_listing_item %}
+
+                    {% block sw_cms_layout_modal_content_listing_item_checkbox %}
+                    {# @deprecated tag:v6.5.0 cmsPage.id is redundant and should be removed as an argument #}
+                    <sw-checkbox-field
+                        :value="cmsPage.id === selected"
+                        type="checkbox"
+                        class="sw-cms-layout-modal__content-checkbox"
+                        @change="onSelection(cmsPage.id, cmsPage)"
+                    />
+                    {% endblock %}
+
+                    {% block sw_cms_layout_modal_content_listing_item_inner %}
+                    {# @deprecated tag:v6.5.0 cmsPage.id is redundant and should be removed as an argument #}
+                    <sw-cms-list-item
+                        :key="cmsPage.id"
+                        :page="cmsPage"
+                        @item-click="selectItem(cmsPage.id, cmsPage)"
+                    />
+                {% endblock %}
+
+                {% endblock %}
+                </div>
+            </sw-container>
+
+            {% block sw_cms_layout_modal_content_pagination %}
+            <sw-pagination
+                class="sw-cms-layout-modal__content-pagination"
+                :page="page"
+                :limit="limit"
+                :total="total"
+                :auto-hide="false"
+                @page-change="onPageChange"
+            />
+            {% endblock %}
+
+        </div>
+        {% endblock %}
+
+        <sw-data-grid
+            v-else-if="listMode === 'list'"
+            class="sw-cms-list__list-data-grid"
+            identifier="sw-cms-list"
+            :is-loading="isLoading"
+            :limit="limit"
+            :data-source="pages"
+            :columns="columnConfig"
+            :skeleton-item-amount="limit"
+            :sort-by="sortBy"
+            :sort-direction="sortDirection"
+            :allow-inline-edit="false"
+            :allow-column-edit="false"
+            :show-settings="false"
+            :show-actions="false"
+            :show-selection="true"
+            :maximum-select-items="1"
+            :pre-selection="gridPreSelection"
+            @selection-change="selectInGrid"
+            @column-sort="onSortColumn"
         >
 
-            {% block sw_cms_layout_modal_content_listing %}
-            <div
-                v-for="(cmsPage, index) in pages"
-                :key="index"
-                class="sw-cms-layout-modal__content-item"
-                :class="[{ 'is--selected': cmsPage.id === selected }, 'sw-cms-layout-modal__content-item--' + index]"
-            >
-                {% block sw_cms_layout_modal_content_listing_item %}
-
-                {% block sw_cms_layout_modal_content_listing_item_checkbox %}
-                {# @deprecated tag:v6.5.0 cmsPage.id is redundant and should be removed as an argument #}
-                <sw-checkbox-field
-                    :value="cmsPage.id === selected"
-                    type="checkbox"
-                    @change="onSelection(cmsPage.id, cmsPage)"
+            {% block sw_cms_list_listing_list_data_grid_column_name %}
+            <template #column-name="{ item }">
+                <sw-icon
+                    v-if="item.locked"
+                    name="default-lock-closed"
+                    class="sw-cms-list__icon-lock"
+                    size="14"
                 />
-                {% endblock %}
-
-                {% block sw_cms_layout_modal_content_listing_item_inner %}
-                {# @deprecated tag:v6.5.0 cmsPage.id is redundant and should be removed as an argument #}
-                <sw-cms-list-item
-                    :key="cmsPage.id"
-                    :page="cmsPage"
-                    @item-click="selectItem(cmsPage.id, cmsPage)"
-                />
-                {% endblock %}
-
-                {% endblock %}
-            </div>
+                <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
+                <div @click="selectItem(item.id, item)">
+                    {{ item.translated.name }}
+                </div>
+            </template>
             {% endblock %}
-        </sw-container>
+
+            {% block sw_cms_list_listing_list_data_grid_column_type %}
+            <template #column-type="{ item }">
+                {{ pageTypes[item.type] }}
+            </template>
+            {% endblock %}
+
+            {% block sw_cms_list_listing_list_data_grid_column_created %}
+            <template #column-createdAt="{ item }">
+                {{ item.createdAt | date({ hour: '2-digit', minute: '2-digit' }) }}
+            </template>
+            {% endblock %}
+
+            {% block sw_cms_list_listing_list_data_grid_column_created %}
+            <template #column-updatedAt="{ item }">
+                {{ item.updatedAt | date({ hour: '2-digit', minute: '2-digit' }) }}
+            </template>
+            {% endblock %}
+
+            {% block sw_cms_list_listing_list_data_grid_pagination %}
+            <template #pagination>
+                <sw-pagination
+                    :page="page"
+                    :limit="limit"
+                    :total="total"
+                    :auto-hide="false"
+                    @page-change="onPageChange"
+                />
+            </template>
+            {% endblock %}
+        </sw-data-grid>
         {% endblock %}
     </div>
     {% endblock %}
