NEXT-17486 - Generate order documents in bulk edit

--- a/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-change-type-field-renderer/sw-bulk-edit-change-type-field-renderer.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-bulk-edit/component/sw-bulk-edit-change-type-field-renderer/sw-bulk-edit-change-type-field-renderer.scss
@@ -1,5 +1,12 @@
 @import "~scss/variables";
 
+.sw-bulk-edit-change-field-renderer {
+    &__change-field > span {
+        color: $color-darkgray-200;
+        font-size: $font-size-extra-small;
+    }
+}
+
 .sw-bulk-edit-change-field__container {
     padding: 24px 32px;
 
