--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid-sales-channel/sw-order-line-items-grid-sales-channel.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid-sales-channel/sw-order-line-items-grid-sales-channel.scss
@@ -29,4 +29,10 @@ $sw-order-line-item-border: $color-gray-300;
             margin-top: 16px;
         }
     }
+
+    &__quantity {
+        &::after {
+            content: 'x';
+        }
+    }
 }
