--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-customer-grid/sw-order-customer-grid.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-customer-grid/sw-order-customer-grid.scss
@@ -1,10 +1,11 @@
 @import '~scss/variables';
+@import '~scss/mixins';
+
 $sw-field--radio-color-border: $color-gray-300;
 
 .sw-order-customer-grid {
     &.sw-card {
         margin: 0;
-        overflow: hidden;
     }
 
     &__empty-state {
@@ -23,6 +24,10 @@ $sw-field--radio-color-border: $color-gray-300;
                 padding: 0 20px;
             }
         }
+    }
+
+    &__search-field {
+        width: 100%;
     }
 
     &__add-customer.sw-button {
@@ -49,16 +54,16 @@ $sw-field--radio-color-border: $color-gray-300;
 }
 
 .sw-field__radio-input {
-    width: 16px;
-    height: 16px;
+    @include square(16px);
+
     margin: 0 auto;
     position: relative;
 
     input[type="radio"] {
+        @include square(100%);
+
         opacity: 0;
         display: block;
-        width: 100%;
-        height: 100%;
         position: absolute;
         top: 0;
         left: 0;
@@ -87,9 +92,8 @@ $sw-field--radio-color-border: $color-gray-300;
     }
 
     .sw-field__radio-state {
-        position: absolute;
-        width: 100%;
-        height: 100%;
+        @include square(100%);
+
         z-index: 1;
         background: $color-white;
         color: $color-darkgray-200;
