NEXT-18179 - Add ability to create entities to sw-entity-single-select component

--- a/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -48,6 +48,8 @@
                     :error="productManufacturerIdError"
                     :placeholder="$tc('sw-product.basicForm.placeholderManufacturer')"
                     show-clearable-button
+                    :creatable="true"
+                    :entity-creation-label="$tc('sw-product.basicForm.labelManufacturer')"
                     @change="updateCurrentValue"
                 />
 
